# jynx-lang

./: .gitignore  CMakeLists.txt  README.md  grammar.ebnf  sample.jx
include/jynx/: common.h  lex.h
src/: lex.cpp  lexer.cpp
